--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=backend-barber
-spring.datasource.url=jdbc:mysql://localhost:3306/servicios
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_barber
+spring.datasource.username=coronel
 spring.datasource.password=coronel7608
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=true    
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+server.port=8081
+#spring.jpa.hibernate.ddl-auto=update
